--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -46,7 +46,7 @@ jobs:
         # https://nexus.dev.pvarki.fi/#browse/browse:go/
         for file in taktool; do
           filename="$(basename "$file")"
-          upload_url="${NEXUS_BASE_URL}#browse/browse:${NEXUS_REPOSITORY}/${filename}"
+          upload_url="${NEXUS_BASE_URL}repository/${NEXUS_REPOSITORY}/${filename}"
           echo "Uploading $filename -> $upload_url"
 
           curl -f -u "${NEXUS_USERNAME}:${NEXUS_PASSWORD}" \
